--- a/libraryservice-install_template.yml
+++ b/libraryservice-install_template.yml
@@ -2,24 +2,24 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: bookservice-%%BUILD_NUMBER%%
+  name: libraryservice-%%BUILD_NUMBER%%
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: bookservice
+        app: libraryservice
         version: %%BUILD_NUMBER%%
       annotations:
         prometheus.io/scrape: true
     spec:
       containers:
       - name: details
-        image: localhost:5000/book-service:%%BUILD_NUMBER%%
+        image: localhost:5000/library-service:%%BUILD_NUMBER%%
         imagePullPolicy: IfNotPresent
         ports:
-        - name: bookservice-api
+        - name: libraryservice-api
           containerPort: 8080
         env:
-        - name: JVM_ARGS
-          value: -Dapp.version=%%BUILD_NUMBER%%
+        - name: GO_ARGS
+          value: -version=%%BUILD_NUMBER%%
