--- a/libraryservice-istio-route_template.yml
+++ b/libraryservice-istio-route_template.yml
@@ -2,9 +2,9 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
-  name: bookservice
+  name: libraryservice
 spec:
-  host: bookservice
+  host: libraryservice
   subsets:
   - name: blue
     labels:
@@ -13,12 +13,12 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: bookservice
+  name: libraryservice
 spec:
   hosts:
-  - bookservice
+  - libraryservice
   http:
   - route:
     - destination:
-        host: bookservice
+        host: libraryservice
         subset: blue
