--- a/libraryservice-service.yml
+++ b/libraryservice-service.yml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bookservice
+  name: libraryservice
   labels:
-    app: bookservice
+    app: libraryservice
 spec:
   ports:
-  - port: 8080
+  - port: 7080
     name: http
   selector:
-    app: bookservice
+    app: libraryservice
